force-app/main/default/objects/Navy__c/Navy__c.object-meta.xml
<CustomObject>
    <label>Navy</label>
    <pluralLabel>Navys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Navy Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>