force-app/main/default/objects/Navy__c/fields/Army__c.field-meta.xml
<CustomField>
    <fullName>Army__c</fullName>
    <label>Army</label>
    <type>Lookup</type>
    <referenceTo>Army__c</referenceTo>
    <relationshipName>Navy_Army</relationshipName>
</CustomField>