force-app/main/default/objects/Navy__c/fields/At_sea__c.field-meta.xml
<CustomField>
    <fullName>At_sea__c</fullName>
    <label>At sea</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>