force-app/main/default/objects/Navy__c/fields/Dig_in_last_date__c.field-meta.xml
<CustomField>
    <fullName>Dig_in_last_date__c</fullName>
    <label>Dig in last date</label>
    <type>Text</type>
    <length>255</length>
</CustomField>