force-app/main/default/objects/Navy__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>