force-app/main/default/objects/Navy__c/fields/Path__c.field-meta.xml
<CustomField>
    <fullName>Path__c</fullName>
    <label>Path</label>
    <type>Lookup</type>
    <referenceTo>Path__c</referenceTo>
    <relationshipName>Navy_Path</relationshipName>
</CustomField>