force-app/main/default/objects/Navy__c/fields/Ship__c.field-meta.xml
<CustomField>
    <fullName>Ship__c</fullName>
    <label>Ship</label>
    <type>Lookup</type>
    <referenceTo>Ship__c</referenceTo>
    <relationshipName>Navy_Ship</relationshipName>
</CustomField>